--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --watchAll --verbose --coverage"
+    "test": "NODE_ENV=test jest --watchAll --verbose --coverage",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
