--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "bcrypt": "^5.0.0",
     "compression": "^1.7.4",
     "config": "^3.3.2",
+    "cors": "^2.8.5",
     "debug": "^4.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^4.1.1",
     "joi": "^17.3.0",
     "joi-objectid": "^3.0.1",
+    "joi-validate-partial": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.10",
